--- a/index.html
+++ b/index.html
@@ -1,59 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Mi Primer Layout</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+	<meta charset="UTF-8">
+	<title>Mi Primer Layout</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-<div class="container">
-    <header>
-     <div class="logotipo">
-	 <img src="img/logo.png">
-	 </div>
-    <hr size="1" color="black" width="100%">
-    <nav>
-	    <ul>
-		    <li>Inicio
-		        <div class="vertical">
-			</li>
-			<li>Sobre Nosotros
-			    <div class="vertical">
-			</li>
-			<li>Nuestras coders
-			    <div class="vertical">
-			</li>
-			<li>Contacto</li>
-		</ul>
-	</nav>
-	<hr size="1" color="black" width="100%">
-	</header>
-	<img class="grupal" src="img/codespace.jpg">
-	<hr size="4" color="gray" width="10%" align="center">
-	<p>Laboratoria existe para encontrar jóvenes mujeres con potencial pero sin acceso a educación superior de calidad, y transformarlas en talentosas desarrolladoras web, que sirven clientes locales e internacionales con soluciones digitales de excelente calidad</p>
-	<hr size="4" color="gray" width="10%" align="center">
-	<h2> Nuestras coders <h2>
-		<hr class="linea"></hr>
-		<div class="cuadro">
-			<div class="padre letras">
-				<a href="coder-detail.html"><img src="img/profile-1.png"></a>
+	<div class="container">
+		<header>
+			<div class="logotipo">
+				<img src="img/logo.png">
 			</div>
-			<div class="padre letras">
-				<img src="img/profile-2.png" alt="">	
-			</div>
-			<div class="padre letras">
-				<img src="img/profile-3.png" alt="">	
-			</div>
-			<div class="padre letras">
-				<img src="img/profile-4.png" alt="">
-			</div>
-			<div class="padre letras">
-				<img src="img/profile-5.png" alt="">			
-			</div>
-			<div class="padre letras">
-				<img src="img/profile-6.png" alt="">
-			</div>		
-		</div>
+			<hr size="1" color="black" width="100%">
+			<nav>
+				<ul>
+					<li>Inicio
+						<div class="vertical">
+					</li>
+					<li>Sobre Nosotros
+						<div class="vertical">
+					</li>
+					<li>Nuestras coders
+						<div class="vertical">
+					</li>
+					<li>Contacto</li>
+				</ul>
+			</nav>
+			<hr size="1" color="black" width="100%">
+		</header>
+		<section>
+			<img class="grupal" src="img/codespace.jpg">
+			<hr size="4" color="gray" width="10%" align="center">
+					<p>Laboratoria existe para encontrar jóvenes mujeres con potencial pero sin acceso a educación superior de calidad, y transformarlas en talentosas desarrolladoras web, que sirven clientes locales e internacionales con soluciones digitales de excelente calidad
+					</p>
+		</section>
+		<section>
+			<hr size="4" color="gray" width="10%" align="center">
+					<h2> Nuestras coders <h2>
+						<hr class="linea"></hr>
+						<div class="cuadro">
+							<div class="padre letras">
+								<a href="coder-detail-1.html"><img src="img/profile-1.png"></a>
+							</div>
+							<div class="padre letras">
+								<a href="coder-detail-2.html"><img src="img/profile-2.png"></a>
+							</div>
+							<div class="padre letras">
+								<a href="coder-detail-3.html"><img src="img/profile-3.png"></a>
+							</div>
+							<div class="padre letras">
+								<a href="coder-detail-4.html"><img src="img/profile-4.png"></a>
+							</div>
+							<div class="padre letras">
+								<a href="coder-detail-5.html"><img src="img/profile-5.png"></a>		
+							</div>
+							<div class="padre letras">
+								<a href="coder-detail-6.html"><img src="img/profile-6.png"></a>
+							</div>		
+						</div>
+		</section>
 	</div>
 </body>
 </html>
